# Simple_CGAL

./: CMakeLists.txt  kernel.h  main - Copy.cpp
SCGAL/Cartesian_kernel/: Simple_cartesian.h
SCGAL/Cartesian_kernel/Cartesian/: Cartesian_base.h  Line_2.h  Point_2.h  Vector_2.h  function_objects.h
SCGAL/Filtered_kernel/: Filtered_kernel.h
SCGAL/Kernel_23/: Exact_predicates_inexact_constructions_kernel.h  Origin.h  determinant.h  enum.h  user_classes.h
SCGAL/Kernel_23/Kernel/: Type_equality_wrapper.h  function_objects.h
SCGAL/Kernel_23/predicates/: sign_of_determinant.h
SCGAL/convexhull/: ch_graham_andrew.h
SCGAL/core/: RefCount.h  mm.cpp
example/ch_graham_anderson/: CMakeLists.txt  ch_graham_anderson.cpp
